// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestDetails sorts by prevalence (google first) 1`] = `
Array [
  AggregateCompanyData {
    "displayName": "Google",
    "name": "Google LLC",
    "normalizedName": "google",
    "prevalence": 80.1,
    "urls": Object {
      "apis.google.com": TrackerUrl {
        "category": "Advertising",
        "url": "apis.google.com",
      },
      "fonts.gstatic.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "fonts.gstatic.com",
      },
      "google.com": TrackerUrl {
        "category": "Advertising",
        "url": "google.com",
      },
      "gstatic.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "gstatic.com",
      },
    },
  },
  AggregateCompanyData {
    "displayName": "Amazon",
    "name": "Amazon Technologies, Inc.",
    "normalizedName": "amazon",
    "prevalence": 21.5,
    "urls": Object {
      "completion.amazon.com": TrackerUrl {
        "category": "Analytics",
        "url": "completion.amazon.com",
      },
      "images-eu.ssl-images-amazon.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "images-eu.ssl-images-amazon.com",
      },
    },
  },
]
`;

exports[`RequestDetails sorts by prevalence 1`] = `
Array [
  AggregateCompanyData {
    "displayName": "Amazon",
    "name": "Amazon Technologies, Inc.",
    "normalizedName": "amazon",
    "prevalence": 21.5,
    "urls": Object {
      "completion.amazon.com": TrackerUrl {
        "category": "Analytics",
        "url": "completion.amazon.com",
      },
      "images-eu.ssl-images-amazon.com": TrackerUrl {
        "category": "Content Delivery",
        "url": "images-eu.ssl-images-amazon.com",
      },
    },
  },
]
`;

exports[`RequestDetails uses correct display name with EntityName matches ETLD+1 1`] = `
AggregatedCompanyResponseData {
  "entities": Object {
    "bbci.co.uk": AggregateCompanyData {
      "displayName": "bbci.co.uk",
      "name": undefined,
      "normalizedName": "bbcico",
      "prevalence": 0,
      "urls": Object {
        "static.files.bbci.co.uk": TrackerUrl {
          "category": undefined,
          "url": "static.files.bbci.co.uk",
        },
      },
    },
  },
  "entitiesCount": 1,
  "requestCount": 1,
}
`;

exports[`createTabData creates a TabData object 1`] = `
Object {
  "certificate": undefined,
  "cookiePromptManagementStatus": undefined,
  "ctaScreens": undefined,
  "domain": "example.com",
  "emailProtection": undefined,
  "error": undefined,
  "id": undefined,
  "isPendingUpdates": undefined,
  "locale": null,
  "parentEntity": undefined,
  "permissions": undefined,
  "platformLimitations": undefined,
  "protections": Protections {
    "allowlisted": false,
    "denylisted": false,
    "enabledFeatures": Array [],
    "unprotectedTemporary": false,
  },
  "requestDetails": RequestDetails {
    "all": AggregatedCompanyResponseData {
      "entities": Object {},
      "entitiesCount": 0,
      "requestCount": 0,
    },
    "allowed": Object {
      "adClickAttribution": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "otherThirdPartyRequest": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "ownedByFirstParty": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "protectionDisabled": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "ruleException": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
    },
    "blocked": AggregatedCompanyResponseData {
      "entities": Object {},
      "entitiesCount": 0,
      "requestCount": 0,
    },
    "surrogates": Array [],
  },
  "search": undefined,
  "specialDomainName": undefined,
  "status": "complete",
  "upgradedHttps": true,
  "url": "https://www.example.com/",
}
`;

exports[`createTabData removes port from the site domain 1`] = `
Object {
  "certificate": undefined,
  "cookiePromptManagementStatus": undefined,
  "ctaScreens": undefined,
  "domain": "example.com",
  "emailProtection": undefined,
  "error": undefined,
  "id": undefined,
  "isPendingUpdates": undefined,
  "locale": null,
  "parentEntity": undefined,
  "permissions": undefined,
  "platformLimitations": undefined,
  "protections": Protections {
    "allowlisted": false,
    "denylisted": false,
    "enabledFeatures": Array [],
    "unprotectedTemporary": false,
  },
  "requestDetails": RequestDetails {
    "all": AggregatedCompanyResponseData {
      "entities": Object {},
      "entitiesCount": 0,
      "requestCount": 0,
    },
    "allowed": Object {
      "adClickAttribution": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "otherThirdPartyRequest": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "ownedByFirstParty": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "protectionDisabled": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
      "ruleException": AggregatedCompanyResponseData {
        "entities": Object {},
        "entitiesCount": 0,
        "requestCount": 0,
      },
    },
    "blocked": AggregatedCompanyResponseData {
      "entities": Object {},
      "entitiesCount": 0,
      "requestCount": 0,
    },
    "surrogates": Array [],
  },
  "search": undefined,
  "specialDomainName": undefined,
  "status": "complete",
  "upgradedHttps": true,
  "url": "https://www.example.com:8080/",
}
`;
